@@ -1,5 +1,9 @@
 2012-12-14  Jason Merrill  <jason@redhat.com>
 
+	PR c++/55685
+	* pt.c (tsubst_copy_and_build): Don't use SIZEOF_EXPR_TYPE_P in
+	templates.
+
 	PR c++/42315
 	* decl.c (maybe_deduce_size_from_array_init): Don't change the
 	variable type.
